--- a/app/views/ideator_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_1.html.erb
@@ -34,7 +34,7 @@
 <h2>Setting Up Your Cloud9 Environment</h2>
 
 <p>
-	Installing Ruby on Rails, Ruby, git, and everything else takes so much time and it can be extremely frustrating. We don't want you to get stuck on this part - we'd rather have you start coding immediately :) That's why we provide Cloud9 accounts for all of our students, so that any student can start coding right away.
+	Installing Ruby on Rails, Ruby, git, and everything else takes so much time and it can be extremely frustrating. We don't want you to get stuck on this part - <strong>we'd rather have you start coding immediately</strong>. That's why we provide Cloud9 accounts for all of our students, so that any student can start coding right away.
 </p>
 
 <p class="alert alert-success">
@@ -86,7 +86,7 @@
 	<h3>How to create a new Rails application</h3>
 
 	<p>
-		When using C9, you don't have to create a new Rails application - C9 does that all for you. But if you want to install Ruby on Rails and Ruby on your system and create a new Rails application, this is what you should do.
+		<strong>When using C9, you don't have to create a new Rails application - C9 does that all for you.</strong> But if you want to install Ruby on Rails and Ruby on your system and create a new Rails application, this is what you should do.
 	</p>
 
 	<p>
@@ -115,8 +115,7 @@ rails new app_name
 </p>
 
 <pre><code class="bash">
-rake db:create:all
-rake db:migrate
+rake db:create
 </code></pre>
 
 
@@ -159,7 +158,7 @@ rake db:migrate
 </div>
 
 <div class="well">
-	<h3>rake db:create:all</h3>
+	<h3>rake db:create</h3>
 
 	<p>
 		We run the <code>rake db:create:all</code> command to create a new database. This command creates a new database according to the information in the <code>database.yml</code> file.
