--- a/app/views/ideator_lessons/lessons/lesson_5.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_5.html.erb
@@ -11,11 +11,11 @@
 <div class="well">
   <h3>What are gems?</h3>
   <p>
-    <strong>Gems are basically super useful packages of code that solve common problems</strong>, for instance installing bootstrap in this case. 
+    <strong>Gems are packages of code</strong> that often times solve common problems, for instance installing bootstrap in this case. 
   </p>
 
   <p>
-    There are gems for mostly every common problem - forms, user log in/authentication, messagers, etc. <strong>Smart people have created these solutions for us already so it’s stupid to reinvent the wheel most of the time.</strong>
+    Many common problems have been solved with gems, so it's often times a good idea to just implement the gems instead of re-implementing it yourself.
   </p>
 
   <%= create_flashcard %>
