--- a/app/views/ideator_lessons/lessons/lesson_21.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_21.html.erb
@@ -1,11 +1,37 @@
-
-
 <p>
   You're almost done! The final step is to tweak the front end to make the app look amazing.
 </p>
 
 <p>
-  This is going to be a <strong>self guided lesson</strong>. Make the app look exactly how you want it!
+  One thing we could improve is how the ideas are being displayed. Right now, the width of the panels are too wide.
+</p>
+
+<p>
+  We can fix this by wrapping the content in bootstrap columns. In <code>application.html.erb</code>, change the code around <code>&lt;%= yield %&gt;</code> to look like this:
+</p>  
+
+<pre><code class="erb">
+&lt;!-- HTML code above --&gt;
+  &lt;div class = "container"&gt;
+    &lt;div class = "row"&gt;
+      &lt;div class = "col-xs-12 col-md-6 col-md-offset-3"&gt;
+        &lt;%= yield %&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;!-- HTML code below --&gt;
+</code></pre>
+
+<p>
+  Here, we have set the width of the content to <code>12</code> when the screen is small, and to <code>6</code> when the screen is larger than medium sized. 
+</p>  
+
+<p>
+  If we refresh the page, our application looks much cleaner!
+</p>
+
+<p>
+  The rest of this lesson is going to be a <strong>self guided lesson</strong>. Make the app look exactly how you want it!
 </p>
 
 <p>
