--- a/app/views/ideator_lessons/lessons/lesson_22.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_22.html.erb
@@ -15,6 +15,7 @@
   &lt;div class = "container"&gt;
     &lt;div class = "row"&gt;
       &lt;div class = "col-xs-12 col-md-6 col-md-offset-3"&gt;
+        &lt;= render 'shared/flash_messages' %&gt;
         &lt;%= yield %&gt;
       &lt;/div&gt;
     &lt;/div&gt;
