add Cat diagram

--- a/app/views/ruby_lessons/lessons/lesson_13.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_13.html.erb
@@ -8,6 +8,52 @@
 	In these next few lessons, we will give you a basic overview of what object oriented programming is.
 </p>
 
+<h3>Classes and Instances</h3>
+
+<p>
+	<strong>Let's talk about cats.</strong>
+</p>
+
+<p>
+	If we think about cats, all cats share same characteristics but also differ in how they look, their age, and their given name.
+</p>
+
+<p>
+	<strong>All cats have:</strong>
+</p>
+
+<ul>
+	<li>Name</li>
+	<li>Age</li>
+	<li>Breed</li>
+</ul>
+
+<p>
+	<strong>All cats can:</strong>
+</p>
+
+<ul>
+	<li>Walk forward</li>
+	<li>Run</li>
+	<li>Jump</li>
+	<li>Eat</li>
+</ul>	
+
+<p>
+	We can organize this information into a <strong><em>class</em></strong> that we can name <code>Cat</code>. Inside the class, we can have <strong><em>variables</em></strong> that represent the common attributes of a cat, and <strong><em>methods</em><strong> that represent the common operations that all cats can perform.
+</p>	
+
+<p>
+	Each different cat is an <strong><em>instance</em></strong> of the <code>Cat</code> class:
+</p>	
+
+<%= image_tag 'ruby_lessons/class_vs_instance.png', class: 'screenshot img-responsive' %>
+
+<p>
+	With this brief introduction of Object Oriented Programming in mind, let's go back to our bill generator program and turn it into an object oriented program.
+</p>	
+
+
 <h3>Objects</h3>
 
 <p>
